# rNets

./: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml
.github/workflows/: build_and_deploy_docs.yml
code/src/: parser.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/rnets/: chemistry.html  dot.html  parser.html  struct.html
docs/_sources/about/: citation.rst.txt
docs/_sources/api/: rnets.colors.rst.txt  rnets.plotter.utils.rst.txt
docs/_sources/examples/: command_line.rst.txt  python_api.rst.txt
docs/_sources/quick_start/: command_line_help.rst.txt  installation.rst.txt
docs/about/: citation.html  contribution.html  developers.html
docs/api/: rnets.chemistry.html  rnets.colors.html  rnets.dot.html  rnets.html  rnets.parser.html  rnets.plotter.html  rnets.plotter.kinetic.html  rnets.plotter.thermo.html  rnets.plotter.utils.html  rnets.struct.html
docs/examples/: command_line.html  published_article.html  python_api.html
docs/examples/published_article/: CO2_Pd.html  imine_condensation.html  regiospecific_CO2.html
docs/quick_start/: basic_usage.html  command_line_help.html  file_formats.html  installation.html
examples/example_CO2HydrogenationNi/: Ni110_comp.csv  Ni110_reac.csv  Ni111C_comp.csv  Ni111C_reac.csv  Ni111_comp.csv  Ni_AdatomMix_reac.csv  PdAg3_comp.csv  PdAg3_reac.csv  PdAg_comp.csv  PdAg_reac.csv  graph.dot  output110.dot  theta_9000_Ni.csv
examples/example_GiffPd111/: Pd_comp_1000.csv  Pd_comp_10000.csv  Pd_comp_2500.csv  Pd_comp_8500.csv  Pd_comp_9250.csv  Pd_comp_9500.csv  Pd_comp_9650.csv  Pd_comp_9750.csv  Pd_reac_1000.csv  README  do_graph.sh  graph.dot  run.py  tests.py  theta_0_Pd.csv  theta_10000_Pd.csv  theta_5000_Pd.csv  theta_8000_Pd.csv  theta_9350_Pd.csv  theta_9650_Pd.csv
examples/example_GiffPd111/assets/: Pd_comp_0.csv  Pd_comp_10250.csv  Pd_comp_11914.csv  Pd_comp_5000.csv  (+12 more)
examples/example_KG/: CycOct.owl  README  RNets_KG_Parser.py  run.py
examples/example_Pd111/: Pd_comp.csv  Pd_g.mkm  Pd_graph_kin.ong  README  compounds.csv  graph.dot  parser_visual.py  reaction_network.dot  rm.mkm  run.py  runner_Pd111.py  theta.csv
examples/example_imine_kinetic/: README.txt  generate_kinetic_gif.py  generate_kinetic_snapshots.py  kinetic_gif.py  kinetic_model.py  kinetic_snapshot.py  reactions_draco_42_simple.csv  run.py
examples/example_imine_thermo/: README.txt  dotfile.py  figure_3a.dot  figure_3b.dot  figure_SX.dot  figure_SY.dot  generate_dotfile.py  reactions_32.csv  reactions_32_simple.csv  reactions_paper_simple.csv  run.py
sphinx/: Makefile  OneDarkPro.py  requirements.txt
sphinx/source/: conf.py  index.rst  installation.rst
src/: color.py  colorschemes.py  dot.py  parser.py  plotter.py  struct.py
src/colors/: colorschemes.py  palettes.py  utils.py
src/rnets/: __init__.py  __main__.py  chemistry.py  conf.py  conf_type_checker.py  dot.py  parser.py  plotter.py  struct.py
tests/: conf_test.py  config.toml
(+68 files in other folders)
