[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rnets","rnets.plotter","rnets.colors","rnets.addons"]

[project]
name = "rnets"
version = "24.06"
dependencies = []
requires-python = ">=3.12"
authors = [
    {name = "Sergio Pablo-Garcia", email = "spgarcica@gmail.com"},
    {name = "Raul Perez Soto", email = "rperezsoto.research@gmail.com"},
    {name = "wvlab"},
    {name = "Albert Sabadell-Rendón"},
    {name = "Diego Garay-Ruiz"}
]
maintainers = [
    {name = "Sergio Pablo-Garcia", email = "spgarcica@gmail.com"}
]
description = "Rnets software for the visualization of reaction networks"
readme = "README.rst"
license  = {file = "LICENSE"}
keywords = ["dot", "graphviz", "reaction", "networks", "chemistry", "reactivity"]
classifiers = [
    "Programming Language :: Python"
]

[project.urls]
homepage = "https://spgarcica.github.io/rNets/"
repository = "https://github.com/spgarcica/rNets"

[project.scripts]
rnets = "rnets.__main__:run"
